package visitor.examples.reflective;

public abstract class Expression {
}
