@startuml

title __REFLECTIVE's Class Diagram__\n

  namespace visitor.examples.reflective {
    class visitor.examples.reflective.AdditionExpression {
        + AdditionExpression()
        + getLeft()
        + getRight()
    }
  }
  

  namespace visitor.examples.reflective {
    class visitor.examples.reflective.Demo {
        {static} + main()
    }
  }
  

  namespace visitor.examples.reflective {
    class visitor.examples.reflective.DoubleExpression {
        - value : double
        + DoubleExpression()
        + getValue()
    }
  }
  

  namespace visitor.examples.reflective {
    abstract class visitor.examples.reflective.Expression {
    }
  }
  

  namespace visitor.examples.reflective {
    class visitor.examples.reflective.ExpressionPrinter {
        {static} + print()
    }
  }
  

  visitor.examples.reflective.AdditionExpression -up-|> visitor.examples.reflective.Expression
  visitor.examples.reflective.AdditionExpression o-- visitor.examples.reflective.Expression : left
  visitor.examples.reflective.AdditionExpression o-- visitor.examples.reflective.Expression : right
  visitor.examples.reflective.DoubleExpression -up-|> visitor.examples.reflective.Expression


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
